--- a/Z_PROIECT/templates/PDF_template.html
+++ b/Z_PROIECT/templates/PDF_template.html
@@ -1,191 +1,200 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <page size="A4"></page>
-  <link rel="stylesheet" href="{{ url_for('static', filename='template.css') }}" />
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
+<html>
+  <head>
+      <style>
+          @page{
+            size:A4;
+            size: portrait;
+            margin:1cm;
+            @frame header_frame {
+            -pdf-frame-content: header_content;
+            width: 20cm; top: 5pt; height:8cm;
+            }
+            @frame footer_frame {
+              -pdf-frame-content: footer_content;
+               top: 772pt; margin-left: 1cm; margin-right: 1cm; height: 2cm;
+            }
+          }
+          body{
+            margin:0;
+            padding:0.5cm;
+            color: black;
+            font-family: 'Candara';
+            font-size:10pt;
+            }
+          a{
+            color:inherit;
+            text-decoration:none;
+          }
+          hr{
+            margin:0;
+            height:0;
+            border:0;
+            border-top:1mm solid;
+          }
+
+          header .logoAndName h1{
+            width:5cm;
+            height:5cm;
+            margin-right:0.5cm;
+          }
+          header .head {
+            height: 4cm;
+            margin-top: 0;
+            margin-bottom: 0;
+            padding: 0;
+          }
+          .r {
+            text-align: right;
+            padding-right: 0.5cm;
+          }
+          .l {
+            text-align: left;
+            padding-left: 0.5cm;
+          }
+          .central {
+              border: 0.5mm, solid;
+              padding: 1mm;
+              margin-top: 0;
+              margin-bottom: 2mm;
+              margin-left: 5mm;
+          }
+          .summary {
+              border: 0.5mm, solid;
+              padding-top: 2mm;
+              padding-bottom:2mm;
+          }
+          .total {
+              text-align: left;
+          }
+          #footerContent {
+              background-color: #B8E6F1;
+              height: 2cm;
+          }
+          #headerContent {
+              background-color: #B8E6F1;
+          }
+      </style>
+	</head>
 <body>
-<!-- The header element will appear on the top of each page of this invoice document. -->
-<header>
-  <div class="headerSection">
-    <!-- As a logo we take an SVG element and add the name in an standard H1 element behind it. -->
-    <div class="logoAndName">
-      <svg>
-        <circle cx="50%" cy="50%" r="40%" stroke="black" stroke-width="3" fill="black" />
-      </svg>
-      <h1>Logo &amp; Name</h1>
-    </div>
-    <!-- Details about the invoice are on the right top side of each page. -->
-    <div class="invoiceDetails">
-      <h2>Invoice #100</h2>
-      <p>
-        07 March 2021
-      </p>
-    </div>
-  </div>
-  <!-- The two header rows are divided by an blue line, we use the HR element for this. -->
-  <hr />
-  <div class="headerSection">
-    <!-- The clients details come on the left side below the logo and company name. -->
-    <div>
-      <h3>Invoice to</h3>
-      <p>
-        <b>Client Name</b>
-        <br />
-        123 Alphabet Road, Suite 01
-        <br />
-        Indianapolis, IN 46260
-        <br />
-        <a href="mailto:clientname@clientwebsite.com">
-          clientname@clientwebsite.com
-        </a>
-        <br />
-        317.123.8765
-      </p>
-    </div>
-    <!-- Additional details can be placed below the invoice details. -->
-    <div>
-      <h3>Due Date</h3>
-      <p>
-        <b>07 April 2021</b>
-      </p>
-      <h3>Amount</h3>
-      <p>
-        <b>$3,500</b>
-      </p>
-    </div>
-  </div>
+    <header>
+      <div id="headerContent">
+        <table class="head">
+        <tr>
+          <td class="l">
+        <div class="logoAndName">
+          <h1><img src='static/eurokyt21.png'/></h1>
+        </div>
+        </td>
+        <td class="r">
+        <div class="invoiceDetails">
+          <h2>Order no. 00{{ json_data.order_id }} </h2>
+          <p></p>
+        </div>
+        </td>
+        </tr>
+        </table>
+        <hr color="#B8E6F1" />
+        <table class="head">
+        <tr>
+          <td class="l">
+            <div>
+              <h3>Due Date</h3>
+              <p>
+                <b id="today2">
+                  {{json_data.today}}
+                </b>
+              </p>
+            </div>
+          </td>
+          <td class="r">
+             <div class="headerSection">
+          <div>
+            <h3>Supplier</h3>
+              <p>
+                <b>{{json_data.supplier[0][0]}}</b>
+                <br />
+                {{json_data.supplier[0][1]}}
+                <br />
+                <a href="mailto:{{json_data.supplier[0][2]}}">
+                  {{json_data.supplier[0][2]}}
+                </a>
+                <br />
+                {{json_data.supplier[0][3]}}
+              </p>
+            </div>
+        </div>
+          </td>
+        </tr>
+      </table>
+        </div>
 </header>
-
-<!-- The footer contains the company's website and address. To align the address details we will use flexbox in the CSS style. -->
-<footer>
-    <a href="https://companywebsite.com">
-      companywebsite.com
-    </a>
-    <a href="mailto:company@website.com">
-      company@website.com
-    </a>
-    <span>
-      317.123.8765
-    </span>
-    <span>
-      123 Alphabet Road, Suite 01, Indianapolis, IN 46260
-    </span>
-</footer>
-
-<!-- In the main section the table for the separate items is added. Also we add another table for the summary, so subtotal, tax and total amount. -->
 <main>
-  <table>
-    <!-- A THEAD element is used to ensure the header of the table is repeated if it consumes more than one page. -->
+  <table class="central">
     <thead>
       <tr>
-        <th>Item Description</th>
-        <th>Rate</th>
-        <th>Amount</th>
-        <th>Total</th>
+        <th>Item Code</th>
+        <th>Description</th>
+        <th>Qty</th>
       </tr>
     </thead>
-    <!-- The single invoice items are all within the TBODY of the table. -->
     <tbody>
+    {% for i in json_data.order %}
       <tr>
-        <td>
-          <b>Item Names Goes Here</b>
-          <br />
-          Description goes here
+        <td class="l">
+          <b> {{i[0]}}</b>
         </td>
-        <td>
-          $100
+        <td class="l">
+          {{i[1]}}
         </td>
-        <td>
-          4
-        </td>
-        <td>
-          $400.00
+        <td class="r">
+          {{i[2]}}
         </td>
       </tr>
-      <tr>
-        <td>
-          <b>Lorem Ipsum</b>
-          <br />
-          Description goes here
-        </td>
-        <td>
-          $250
-        </td>
-        <td>
-          2
-        </td>
-        <td>
-          $500.00
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <b>Dolor Set Amit Caslum</b>
-          <br />
-          Description goes here
-        </td>
-        <td>
-          $300
-        </td>
-        <td>
-          1
-        </td>
-        <td>
-          $300.00
-        </td>
-      </tr>
+    {% endfor %}
     </tbody>
   </table>
-  <!-- The summary table contains the subtotal, tax and total amount. -->
   <table class="summary">
     <tr>
-      <th>
-        Subtotal
+      <th class="total">
+        Delivery destination
       </th>
-      <td>
-        $1200.00
-      </td>
     </tr>
     <tr>
-      <th>
-        Tax 4.7%
-      </th>
-      <td>
-        $000.00
-      </td>
-    </tr>
-    <tr class="total">
-      <th>
-        Total
-      </th>
-      <td>
-        $12,000.00
+      <td class="total">
+        <b>Punto Finestre SPA</b><br/>
+        Ferri str. no. 24-26<br/>
+        Borgosatollo, Italy
       </td>
     </tr>
   </table>
-</main>
-<!-- Within the aside tag we will put the terms and conditions which shall be shown below the invoice table. -->
 <aside>
-  <!-- Before the terms and conditions we will add another blue divider line with the help of the HR tag. -->
   <hr />
   <div>
     <div>
-      <b>Terms &amp; Conditions</b>
+      <b>Notes</b>
       <p>
-        Please make payment within 30 days of issue of the invoice.
+        {{json_data.notes}}
       </p>
     </div>
-    <div>
-      <b>Payment Options</b>
-      <ul>
-        <li>Paypal</li>
-        <li>Credit Card</li>
-      </ul>
-    </div>
   </div>
+   <hr />
 </aside>
+</main>
+<footer>
+  <div id="footerContent">
+    <a href="https://eurokyt.com">
+      www.eurokyt.com
+    </a>
+    <a href="mailto:office@eurokyt.com">
+      office@eurokyt.com
+    </a>
+    <span>
+      +40 264 433 057
+    </span>
+    <span>
+      Oasului str. no.118, Cluj Napoca 400268, Romania
+    </span>
+  </div>
+</footer>
 </body>
 </html>
