--- a/Z_PROIECT/templates/database.html
+++ b/Z_PROIECT/templates/database.html
@@ -21,7 +21,7 @@
 {% block footer %}
 <form class="fo" action="/accessories/search/" method="POST">
     <input id="sh" type="text" name="search" placeholder="Search">
-    <input class="foot_but" type="submit" name="search" value="Cauta">
+    <input class="foot_but" type="submit" value="Cauta">
 </form>
     <button class="foot_but" onclick="window.location.href='/accessories/new/'">Nou</button>
 {% endblock %}
