--- a/Z_PROIECT/templates/succes.html
+++ b/Z_PROIECT/templates/succes.html
@@ -3,7 +3,7 @@
 {% block title %}KBR Orders{% endblock %}
 
 {% block content %}
-    <div id="h_div">
+    <div id="success">
         Succes, ai creat comanda cu numarul {{order_id}}
     </div>
 {% endblock %}
