--- a/Z_PROIECT/templates/succes.html
+++ b/Z_PROIECT/templates/succes.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div id="success">
-        Succes, ai creat comanda cu numarul {{order_id}}
+        Succes, ai creat comanda cu numarul {{order_id}}!
     </div>
 {% endblock %}
 
