--- a/Z_PROIECT/templates/comanda_noua.html
+++ b/Z_PROIECT/templates/comanda_noua.html
@@ -3,6 +3,12 @@
 {% block title %}KBR Orders{% endblock %}
 
 {% block content %}
+<style>
+    .vertical-nav ul a.menu_new_order {
+        background-color: blue;
+        color: white;
+    }
+</style>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <div class="container">
     <form action="/comanda_noua/furnizor/" method="post" class="insert-form">
