--- a/Z_PROIECT/templates/furnizori.html
+++ b/Z_PROIECT/templates/furnizori.html
@@ -3,6 +3,12 @@
 {% block title %}KBR Suppliers{% endblock %}
 
 {% block content %}
+<style>
+    .vertical-nav ul a.menu_supplier {
+        background-color: blue;
+        color: white;
+    }
+</style>
     <div id="database_div">
         <table id="database_table">
             <tr>
@@ -21,7 +27,11 @@
 
 {% block footer %}
 <form class="fo" action="/furnizori/search/" method="POST">
-    <input id="sh" type="text" name="search" placeholder="Search">
+    {% if search %}
+    <input class="sh" type="text" name="search" placeholder={{search}}>
+    {% else %}
+    <input class="sh" type="text" name="search" placeholder="Search">
+    {% endif %}
     <input class="foot_but" type="submit" name="search" value="Cauta">
 </form>
     <button class="foot_but" onclick="window.location.href='/furnizori/new/'">Nou</button>
