--- a/Z_PROIECT/templates/home.html
+++ b/Z_PROIECT/templates/home.html
@@ -3,6 +3,12 @@
 {% block title %}KBR Orders{% endblock %}
 
 {% block content %}
+<style>
+    .vertical-nav ul a.menu_home {
+        background-color: blue;
+        color: white;
+    }
+</style>
     <div id="h_div">
         <a id="h_button" href="/comanda_noua/">Creeaza o comanda noua</a>
     </div>
