--- a/Z_PROIECT/templates/layout.html
+++ b/Z_PROIECT/templates/layout.html
@@ -21,11 +21,11 @@
     </header>
     <nav class="vertical-nav">
         <ul class="menu">
-            <li><a href="/home/">Home</a></li>
-            <li><a href="/comanda_noua/">Comanda noua</a></li>
-            <li><a href="/furnizori/">Furnizori</a></li>
-            <li><a href="/comenzi/">Comenzi</a></li>
-            <li><a href="/accessories/">Accesorii</a></li>
+            <li><a class="menu_home" href="/home/">Home</a></li>
+            <li><a class="menu_new_order" href="/comanda_noua/">Comanda noua</a></li>
+            <li><a class="menu_supplier" href="/furnizori/">Furnizori</a></li>
+            <li><a class="menu_orders" href="/comenzi/">Comenzi</a></li>
+            <li><a class="menu_accessories" href="/accessories/">Accesorii</a></li>
         </ul>
     </nav>
     <div id="div">
