--- a/Z_PROIECT/templates/new_accessory.html
+++ b/Z_PROIECT/templates/new_accessory.html
@@ -3,6 +3,12 @@
 {% block title %}KBR Accessories{% endblock %}
 
 {% block content %}
+<style>
+    .vertical-nav ul a.menu_accessories {
+        background-color: blue;
+        color: white;
+    }
+</style>
     <div id="database_div">
         {% if accessory %}
         <table id="database_table2">
