--- a/PROJECT_KBR/templates/comanda_noua.html
+++ b/PROJECT_KBR/templates/comanda_noua.html
@@ -66,6 +66,11 @@
                                     <input type="button" name="add" id="add" value="Adauga" class="foot_but3">
                                 </div>
                             </th>
+                        </tr>
+                        <tr>
+                            <td><textarea class="note" name="note" ></textarea></td>
+                        </tr>
+                        <tr>
                             <th>
                                 <div class="col-12 m-3">
                                     <input type="submit" name="save" id="save" value="Salveaza" class="foot_but3">
