--- a/PROJECT_KBR/static/style.css
+++ b/PROJECT_KBR/static/style.css
@@ -293,11 +293,14 @@ body > nav{
     padding-left: 2vw;
 }
 
+.ord3 {
+    text-align: center;;
+}
 
 #t_h{
     font-family: Candara;
     font-size: 15px;
-    font_weight: bold;
+    font-weight: bold;
 }
 
 #ord_h {
@@ -328,4 +331,36 @@ body > nav{
     font-family: Candara;
     color: black;
     font-size: 15px;
+}
+
+#answer_supp_ord {
+    padding-left: 50px;
+}
+
+.title1{
+    font-family: Candara;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 15px;
+    margin-left: 15px;
+}
+
+#database_table_home tr, th, td{
+    font-family: Candara;
+    padding: 5px;
+    width: 15vw;
+}
+
+#database_table_home {
+    min-width: 81vw;
+}
+
+.acc_list:invalid {
+    border: 1px solid rgba(255, 0, 0, 0.7);
+    box-shadow: 0px 0px 10px orangered;
+}
+
+.form-control:invalid {
+    border: 1px solid rgba(255, 0, 0, 0.7);
+    box-shadow: 0px 0px 10px orangered;
 }
