--- a/PROJECT_KBR/templates/comanda_noua.html
+++ b/PROJECT_KBR/templates/comanda_noua.html
@@ -47,7 +47,7 @@
                     <tr>
                         <th>Cod accesoriu</th>
                         <th>Cantitate</th>
-                        <th>Sterge</th>
+                        <th></th>
                     </tr>
                     <tr>
                         <td><select class="acc_list" name="accessories[]" id="select_acc">
@@ -64,19 +64,21 @@
                     <table>
                         <tr>
                             <td><div id="answer_acc_ord" class="color-red"></div></td>
+                            <td><div id="answer_acc_qty" class="color-red"></div></td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <th>
+                            <th colspan="2">
                                 <div class="col-12 text-right">
                                     <input type="button" name="add" id="add" value="Adauga" class="foot_but3">
                                 </div>
                             </th>
                         </tr>
                         <tr>
-                            <td><textarea class="note" name="note"></textarea></td>
+                            <td colspan="2"><textarea class="note" name="note"></textarea></td>
                         </tr>
                         <tr>
-                            <th>
+                            <th colspan="2">
                                 <div class="col-12 m-3">
                                     <input type="submit" name="save" id="save" value="Salveaza" class="foot_but3">
                                 </div>
