--- a/PROJECT_KBR/static/style.css
+++ b/PROJECT_KBR/static/style.css
@@ -324,10 +324,10 @@ body > nav{
 }
 
 .note {
-    width: 25vw;
+    width: 30vw;
     height: 10vh;
     padding: 5px;
-    margin: 20px;
+    margin: 10px;
     font-family: Candara;
     color: black;
     font-size: 15px;
@@ -355,12 +355,16 @@ body > nav{
     min-width: 81vw;
 }
 
-.acc_list:invalid {
+.acc_list: {
     border: 1px solid rgba(255, 0, 0, 0.7);
     box-shadow: 0px 0px 10px orangered;
 }
 
-.form-control:invalid {
+.form-control: {
     border: 1px solid rgba(255, 0, 0, 0.7);
     box-shadow: 0px 0px 10px orangered;
+}
+
+#answer_acc_qty {
+    align: left;
 }
